# anvil

./: app.js  collect.sh  index.html  styles.css
.github/workflows/: compile.yml  pages.yml
bootstrap/: gentle-sample.sh
bootstrap/compiled/: cli1.sh  kanidm.hcl  nginx.hcl  seed-1.sh  seed.sh  srv2.sh  srv3.sh
bootstrap/pending/: topology.hcl
guardian/: Cargo.toml  example-job.hcl
guardian/src/: main.rs  nomad.rs
lib/: auth.js  cmd-builder.js  crypto.js  escape.js  github-client.js  hcl-builder.js  i18n.js  nomad-client.js  oidc.js  parse-collect.js  template.js  topology.js
pages/: approval.js  audit.js  bootstrap.js  deploy.js  maintenance.js
scripts/: compile.mjs
scripts/lib/: gen-client.mjs  gen-join.mjs  gen-kanidm.mjs  gen-nginx.mjs  gen-server.mjs  hcl-parser.mjs
templates/hello-exec/: job.hcl  params.json
templates/nginx/: job.hcl  params.json
templates/vol-expand/: job.hcl  params.json
ui/: credential-form.js  deploy.js  login.js  output.js  settings.js  topology-form.js
