[package]
name = "guardian"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
xz2 = "0.1"
walkdir = "2"
hex = "0.4"
chrono = "0.4"

[[bin]]
name = "guardian"
path = "src/main.rs"
